--- a/frontend/templates/frontend/login.html
+++ b/frontend/templates/frontend/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<form action="" class="container">
+<form action="" class="container my-3 py-3 shadow rounded border">
 
     <h2>Login</h2>
 
