--- a/frontend/templates/frontend/profile.html
+++ b/frontend/templates/frontend/profile.html
@@ -4,12 +4,11 @@
 <style>
     .profile {
         margin: 20px auto;
-        border: solid black 2px;
         width: 50%;
     }
 </style>
 
-<div id="profile" class="profile container p-4">
+<div id="profile" class="profile container p-4 my-3 py-3 shadow rounded border">
     <p id="name">NOT LOGGED IN</p>
     <p id="username"></p>
     <p id="email"></p>        
