--- a/frontend/templates/frontend/register.html
+++ b/frontend/templates/frontend/register.html
@@ -1,7 +1,7 @@
 {% extends 'frontend/base.html' %}
 {% block content %}
 
-<form action="" class="container">
+<form action="" class="container my-3 py-3 shadow rounded border">
 
     <h2>Register</h2>
 
