--- a/frontend/templates/frontend/landing.html
+++ b/frontend/templates/frontend/landing.html
@@ -1,7 +1,7 @@
 {% extends 'frontend/base.html' %}
 {% block content %}
 
-<div class="container p-5">
+<div class="container p-5 my-3 py-3 shadow rounded border">
     <div class="row">
             <div class="col-1"></div>
             <a href="{% url 'login' %}" class="btn btn-primary col-4">Login</a>
